--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<h1>Hello, World!</h1>
+<!DOCTYPE html>
+<html>
+
+<head>
+  <title>Jaewon Lee's Log</title>
+</head>
+
+<body>
+
+</body>
+
+</html>
